[gd_scene load_steps=8 format=3 uid="uid://ceafvsn8bq41a"]

[ext_resource type="PackedScene" uid="uid://np2v30m1u6ix" path="res://global/static_background.tscn" id="1_m5n45"]
[ext_resource type="Script" uid="uid://bkudb68g867sk" path="res://scenes/startmenu/startmenu.gd" id="1_uhfuj"]
[ext_resource type="Texture2D" uid="uid://b0spk6cqu684l" path="res://assets/graphics/coin_green.png" id="3_4nrrk"]
[ext_resource type="Texture2D" uid="uid://fpj25fy2fmg3" path="res://assets/graphics/coin_red.png" id="4_m6bjs"]
[ext_resource type="Texture2D" uid="uid://cafbbl6snpw4v" path="res://assets/graphics/Title.png" id="5_m6bjs"]
[ext_resource type="AudioStream" uid="uid://clbgft2te3q2c" path="res://assets/sounds/Titelmusik.mp3" id="6_wubex"]
[ext_resource type="PackedScene" uid="uid://dm1c8r4lgl7he" path="res://scenes/util/sound.tscn" id="7_a1yho"]

[node name="Startmenu" type="CanvasLayer"]
script = ExtResource("1_uhfuj")

[node name="static_background" parent="." instance=ExtResource("1_m5n45")]

[node name="Panel" type="Panel" parent="."]
anchors_preset = -1
anchor_left = 0.518
anchor_right = 0.518
offset_left = -121.584
offset_top = 334.0
offset_right = 74.416
offset_bottom = 459.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlayerPanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerOneBox" type="VBoxContainer" parent="Panel/PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -333.0
offset_top = -81.5
offset_right = -211.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(61, 81.5)
theme_override_constants/separation = 16
alignment = 1

[node name="PlayerOneCoin" type="TextureRect" parent="Panel/PlayerPanel/PlayerOneBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("4_m6bjs")
stretch_mode = 2

[node name="PlayerOneLabel" type="Label" parent="Panel/PlayerPanel/PlayerOneBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Player One:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerOneName" type="Label" parent="Panel/PlayerPanel/PlayerOneBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Human"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoBox" type="VBoxContainer" parent="Panel/PlayerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 211.0
offset_top = -81.5
offset_right = 333.0
offset_bottom = 81.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.5, 1.5)
pivot_offset = Vector2(61, 81.5)
theme_override_constants/separation = 16
alignment = 1

[node name="PlayerTwoCoin" type="TextureRect" parent="Panel/PlayerPanel/PlayerTwoBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("3_4nrrk")
stretch_mode = 2

[node name="PlayerTwoLabel" type="Label" parent="Panel/PlayerPanel/PlayerTwoBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Player Two:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PlayerTwoName" type="Label" parent="Panel/PlayerPanel/PlayerTwoBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "Human"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GamePanel" type="Panel" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/GamePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -74.0
offset_top = -20.0
offset_right = 74.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/GamePanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Label" type="Label" parent="Panel/GamePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Games:"
horizontal_alignment = 1

[node name="Games" type="SpinBox" parent="Panel/GamePanel/VBoxContainer/HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
rounded = true

[node name="Button" type="Button" parent="Panel/GamePanel/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 22
text = "Start Game"

[node name="Port" type="Control" parent="."]
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="Port"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -150.0
offset_top = -60.0
offset_right = -22.0
offset_bottom = -20.0
grow_horizontal = 0
grow_vertical = 0

[node name="port_label" type="Label" parent="Port/HBoxContainer"]
layout_mode = 2
text = "Port:"
horizontal_alignment = 1

[node name="port_number" type="SpinBox" parent="Port/HBoxContainer"]
layout_mode = 2
min_value = 1000.0
max_value = 9999.0
value = 5051.0
rounded = true

[node name="Title" type="TextureRect" parent="."]
texture_filter = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -396.0
offset_top = 32.0
offset_right = 396.0
offset_bottom = 197.0
grow_horizontal = 2
size_flags_vertical = 0
texture = ExtResource("5_m6bjs")

[node name="Audio" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wubex")
volume_db = -7.0
autoplay = true
parameters/looping = true

[node name="Sound" parent="." instance=ExtResource("7_a1yho")]

[node name="byCB" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 108.0
offset_top = 194.0
offset_right = 251.0
offset_bottom = 220.0
grow_horizontal = 2
rotation = -0.0907571
text = "by Coding Buddies"

[connection signal="pressed" from="Panel/GamePanel/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="value_changed" from="Port/HBoxContainer/port_number" to="." method="_on_port_number_value_changed"]
